--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,13 +1,16 @@
 # A generic, single database configuration.
 
 [alembic]
+# path to migration scripts (this file is inside the migrations folder)
+script_location = .
+version_locations = ./versions
+
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
-
 
 # Logging configuration
 [loggers]
