custom all authz

--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,9 +1,10 @@
 # A generic, single database configuration.
 
 [alembic]
-# path to migration scripts (this file is inside the migrations folder)
-script_location = .
-version_locations = ./versions
+# path to migration scripts
+# NOTE: Flask-Migrate runs from the repo root, so these must be repo-root-relative.
+script_location = migrations
+version_locations = migrations/versions
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
